Added admin inventory creation and deletion

--- a/apps/user_management/templates/admin_dashboard.html
+++ b/apps/user_management/templates/admin_dashboard.html
@@ -38,6 +38,7 @@
     <h1>Admin Dashboard</h1>
     <ul class="options">
         <li><a href="{% url 'manage_users' %}">Manage User Accounts</a></li>
+        <li><a href="{% url 'inventory_page' %}">Manage Inventory</a></li>
     </ul>
 </body>
 </html>
