--- a/apps/inventory/templates/inventory_home.html
+++ b/apps/inventory/templates/inventory_home.html
@@ -30,11 +30,18 @@
             <li>No items found.</li>
         {% endfor %}
     </ul>
+    
     {% if is_admin %}
+    <div class="button-row">
+        <div class="back-button-wrapper">
+            <a href="{% url 'admin_dashboard' %}">Back to Admin Dashboard</a>
+        </div>
         <div class="create-button-wrapper">
             <a href="{% url 'create_item' %}">Create a new item</a>
         </div>
-    {% endif %}
+    </div>
+{% endif %}
+
 </div>
 </body>
 </html>
