--- a/apps/inventory/templates/inventory_home.html
+++ b/apps/inventory/templates/inventory_home.html
@@ -67,6 +67,10 @@
         <div class="create-button-wrapper">
             <a href="{% url 'create_item' %}">Create a new item</a>
         </div>
+        <!-- Add this new button for report generation -->
+        <div class="report-button-wrapper">
+            <a href="{% url 'reports_page' %}" class="btn-report">Generate Reports</a>
+        </div>
     </div>
     {% endif %}
 </div>
