Updated report gen styling to match the rest of app

--- a/apps/report_generation/templates/report_selection.html
+++ b/apps/report_generation/templates/report_selection.html
@@ -1,6 +1,6 @@
 
 {% block content %}
-<div class="report-container">
+<div class="report-container", style="font-family: Arial, sans-serif;">
     <h2>Generate Report</h2>
     <form method="POST">
         {% csrf_token %}
