--- a/apps/report_generation/templates/report_output.html
+++ b/apps/report_generation/templates/report_output.html
@@ -1,5 +1,5 @@
 {% block content %}
-<div class="report-output">
+<div class="report-output", , style="font-family: Arial, sans-serif;">
     <h2>Generated Report</h2>
     
     <div class="report-meta">
